<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:text="@string/numbers" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtMobile"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="@string/msg" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/back_btn"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/W_SHbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="275dp"
        android:text="@string/W_SH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <Button
        android:id="@+id/R_SHbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/R_SH"
        app:layout_constraintStart_toEndOf="@+id/W_SHbtn"
        app:layout_constraintTop_toTopOf="@+id/W_SHbtn" />

    <Button
        android:id="@+id/W_ISbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="275dp"
        android:text="@string/W_IS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/W_SHbtn" />

    <Button
        android:id="@+id/R_ISbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/R_IS"
        app:layout_constraintStart_toStartOf="@+id/R_SHbtn"
        app:layout_constraintTop_toTopOf="@+id/W_ISbtn" />

    <Button
        android:id="@+id/W_DBbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="273dp"
        android:text="@string/W_DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/W_ISbtn"
        app:layout_constraintTop_toBottomOf="@+id/W_ISbtn" />

    <Button
        android:id="@+id/R_DBbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/R_DB"
        app:layout_constraintBottom_toBottomOf="@+id/W_DBbtn"
        app:layout_constraintStart_toStartOf="@+id/R_ISbtn"
        app:layout_constraintTop_toBottomOf="@+id/R_ISbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>